move Product to object

--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,9 @@
             "./lib/controllers/wishlist.php",
             "./lib/models/product.php",
             "./lib/models/wishlist.php"
-        ]
+        ],
+        "psr-4": {
+            "Develop\\Business\\": "src/"
+        }
     }
 }
