--- a/composer.json
+++ b/composer.json
@@ -20,5 +20,10 @@
         "psr-4": {
             "Develop\\Business\\": "src/"
         }
+    },
+    "require": {
+    },
+    "require-dev": {
+        "phpunit/phpunit": "~5.4"
     }
 }
