--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -14,6 +14,7 @@
     <testsuites>
         <testsuite name="all">
             <directory>src/*/Tests</directory>
+            <directory>src/**/*/Tests</directory>
         </testsuite>
     </testsuites>
 
@@ -22,6 +23,7 @@
             <directory>src</directory>
             <exclude>
                 <directory>src/*/Tests</directory>
+                <directory>src/**/*/Tests</directory>
             </exclude>
         </whitelist>
     </filter>
