add event dispatcher
it is a observer pattern and it is pretty good to make things decoupled,
in this case I will show how to is possible notify users when
product's stock has been updated.

--- a/config/app.ini
+++ b/config/app.ini
@@ -1,16 +1,32 @@
 [databaseConnection \PDO]
 __construct = ["sqlite:../data/business.db", null, null]
 
+[wishlistNotifier \Develop\Business\Application\ProductWishlist\EchoNotifier]
+
+[productFactory \Develop\Business\Product\Factory]
+
+[productRepository \Develop\Business\Application\Product\Repositories\Product]
+driver = [databaseConnection]
+
 [wishlistFactory \Develop\Business\Wishlist\Factory]
 
 [wishlistRepository \Develop\Business\Application\ProductWishlist\Repositories\PdoRepository]
 __construct = [[databaseConnection], [wishlistFactory]]
-
-[productRepository \Develop\Business\Application\Product\Repositories\Product]
-driver = [databaseConnection]
 
 [wishlistItemResolver Develop\Business\Application\ProductWishlist\ItemResolver]
 product = [productRepository]
 
 [wishlistAddItemWishlistUseCase \Develop\Business\Wishlist\UseCases\AddItemWishlist]
 __construct = [[wishlistRepository], [wishlistFactory], [wishlistItemResolver]]
+
+[wishlistNotifyProductAvailableUseCase \Develop\Business\Wishlist\UseCases\NotifyProductAvailable]
+__construct = [[wishlistRepository], [wishlistItemResolver]]
+
+[wishlistProductListener Develop\Business\Application\ProductWishlist\Listeners\ProductStockHasIncreased]
+__construct = [[wishlistNotifyProductAvailableUseCase], [wishlistNotifier]]
+
+[eventDispatcher \Symfony\Component\EventDispatcher\EventDispatcher]
+addListener[] = [\Develop\Business\Product\Events\ProductStockHasIncreased::NAME, [wishlistProductListener]]
+
+[productUpdateUseCase \Develop\Business\Product\UseCases\UpdateProduct]
+__construct = [[productRepository], [productFactory], [eventDispatcher]]
