--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         }
     },
     "require": {
-        "respect/config": "~2.0"
+        "respect/config": "~2.0",
+        "symfony/event-dispatcher": "~3.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~5.4"
