add dependency injection
it allows a program design to follow the dependency inversion principle

--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         }
     },
     "require": {
+        "respect/config": "~2.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~5.4"
